kubernetes/letschess-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: letschess
  labels: 
    istio-injection: enabled
