kubernetes/letschess-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: letschess-ingress
  namespace: letschess
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: letschessfrontend
            port: 
              number: 3000
      # - path: /api/user(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: userservice
      #       port: 
      #         number: 6001
      # - path: /api/gateway(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: letschessbackend
      #       port: 
      #         number: 6011
      # - path: /fe(/|$)(.*)
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: letschessfrontend
      #       port: 
      #         number: 3000
